Fixed Instagram embed position bug on mobile resolution

--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,7 @@ section {
 
 .grid-3-columns {
     grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
     grid-gap: 30px;
 }
 
